[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex        = "1.8.4"
regex-macro  = "0.2.0"
lalrpop      = "0.20.0"
lalrpop-util = "0.20.0"

[build-dependencies]
lalrpop      = "0.20.0"
